--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,30 @@
-message=config
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
+
+
+spring.sleuth.scheduled.enabled=false
+spring.sleuth.async.enabled=false
+spring.sleuth.annotation.enabled=false
+
+
+# management endpoints
+management.endpoints.web.expose=*
+management.endpoint.refresh.enabled=true
+
+
+spring.sleuth.sampler.percentage=1.0
+logging.level.org.springframework.security=DEBUG
+spring.sleuth.log.json.enabled=true
+
+
+endpoints.shutdown.enabled=true
+
+
+
+# eureka config
+eureka.instance.hostname=localhost
+eureka.instance.leaseRenewalIntervalInSeconds = 5
+
+eureka.client.region = default
+eureka.client.registryFetchIntervalSeconds = 5
+eureka.client.serviceUrl.defaultZone=localhost:8761/eureka/
