--- a/application.properties
+++ b/application.properties
@@ -22,9 +22,9 @@ endpoints.shutdown.enabled=true
 
 
 # eureka config
-eureka.instance.hostname=localhost
-eureka.instance.leaseRenewalIntervalInSeconds = 5
-
-eureka.client.region = default
-eureka.client.registryFetchIntervalSeconds = 5
-eureka.client.serviceUrl.defaultZone=localhost:8761/eureka/
+#eureka.instance.hostname=localhost
+#eureka.instance.leaseRenewalIntervalInSeconds = 5
+#
+#eureka.client.region = default
+#eureka.client.registryFetchIntervalSeconds = 5
+#eureka.client.serviceUrl.defaultZone=localhost:8761/eureka/
