--- a/sms-server-dvl-phase1.properties
+++ b/sms-server-dvl-phase1.properties
@@ -2,4 +2,4 @@ server.port=8081
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 15  
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-#spring.zipkin.base-url=http://ZIPKINSERVER
+spring.zipkin.base-url=http://ZIPKINSERVER
