--- a/mail-server-dvl-phase1.properties
+++ b/mail-server-dvl-phase1.properties
@@ -1,5 +1,7 @@
 server.port=7181
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 15  
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.zipkin.base-url=http://ZIPKINSERVER
