--- a/sms-server-dvl-phase1.properties
+++ b/sms-server-dvl-phase1.properties
@@ -1,4 +1,5 @@
 server.port=7180
+project.name=sms-server
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 15  
 eureka.instance.hostname=localhost
