--- a/mail-server-dvl-phase1.properties
+++ b/mail-server-dvl-phase1.properties
@@ -1,4 +1,5 @@
 server.port=7181
+project.name=mail-server
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 15  
 eureka.instance.hostname=localhost
