--- a/property-list-server-local.properties
+++ b/property-list-server-local.properties
@@ -8,7 +8,7 @@ db.password:
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:false
-hibernate.hbm2ddl.auto:create/update
+hibernate.hbm2ddl.auto:create
 entitymanager.packagesToScan:com.orastays.property.propertylist.entity
 
 server.port=7190
