--- a/property-list-server-local.properties
+++ b/property-list-server-local.properties
@@ -1,14 +1,14 @@
 # Database
 db.name=ora_property
 db.driver:com.mysql.jdbc.Driver
-db.url:jdbc:mysql://localhost:3306/ora_propertygen
+db.url:jdbc:mysql://localhost:3306/ora_property
 db.username:root
 db.password:
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
-hibernate.hbm2ddl.auto:create
+hibernate.hbm2ddl.auto:create/update
 entitymanager.packagesToScan:com.orastays.property.propertylist.entity
 
 server.port=7190
