--- a/banner-server-dvl-phase1.properties
+++ b/banner-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.banner.bannerserver.entity
+entitymanager.packagesToScan:com.orastays.bannerserver.entity
 
 server.port=7186
 project.name=banner-server
