package names changes

--- a/booking-server-dvl-phase1.properties
+++ b/booking-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.booking.bookingserver.entity
+entitymanager.packagesToScan:com.orastays.bookingserver.entity
 
 server.port=7191
 project.name=booking-server
@@ -22,6 +22,7 @@ spring.zipkin.base-url=http://ZIPKINSERVER
 
 
 ###################################### cashfree properties start ###############################################
+
 appId=2740561eed8d839716fe23ab0472
 secretKey=99baedae4b96b79b9b0e05a87cb2680f90048bb0
 createOrderUrl=https://test.gocashfree.com/api/v1/order/create
@@ -32,6 +33,7 @@ notifyUrl=http://localhost:7191/api/notify-booking
 ###################################### cashfree properties end ##################################################
 
 ###################################### booking server properties start ##########################################
+
 common.success.code=200
 common.success.message=OK
 common.error.code=201
