--- a/flight-server-dvl-phase1.properties
+++ b/flight-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create
-entitymanager.packagesToScan:com.orastays.flight.flightserver.entity
+entitymanager.packagesToScan:com.orastays.flightserver.entity
 
 server.port=7193
 project.name=flight-server
