--- a/flight-server-local.properties
+++ b/flight-server-local.properties
@@ -9,13 +9,33 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create
-entitymanager.packagesToScan:com.orastays.flight.flightserver.entity
+entitymanager.packagesToScan:com.orastays.flightserver.entity
 
 server.port=7193
 project.name=flight-server
+
+###################################### cashfree properties start ###############################################
+
 appId=2740561eed8d839716fe23ab0472
 secretKey=99baedae4b96b79b9b0e05a87cb2680f90048bb0
 createOrderUrl=https://test.gocashfree.com/api/v1/order/create
 initiateRefundUrl=https://test.gocashfree.com/api/v1/order/refund
 returnUrl=http://localhost:7193/api/notify-booking
 notifyUrl=http://localhost:7193/api/notify-booking
+
+###################################### cashfree properties end ##################################################
+
+###################################### booking server properties start ##########################################
+
+common.success.code=200
+common.success.message=OK
+common.error.code=201
+common.error.message=Please Try after Sometime
+generic.error.code=1800
+generic.error.message=Please Try after Sometime
+cashfreecreateorder.error.code=1801
+cashfreecreateorder.error.message=Error Occured During Order Generation. Please try after sometime
+cashfreerefundorder.error.code=1802
+cashfreerefundorder.error.message=Error Occured During Refund Creation. Please try after sometime
+
+###################################### booking server properties end ##########################################
