--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -8,7 +8,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.hotel.hotelserver.entity
+entitymanager.packagesToScan:com.orastays.hotelserver.entity
 
 server.port=7094
 project.name=hotel-server
