--- a/newsletter-server-dvl-phase1.properties
+++ b/newsletter-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.newsletter.newsletterserver.entity
+entitymanager.packagesToScan:com.orastays.newsletterserver.entity
 
 server.port=7187
 project.name=newsletter-server
