--- a/property-list-server-dvl-phase1.properties
+++ b/property-list-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:false
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.property.propertylist.entity
+entitymanager.packagesToScan:com.orastays.propertylist.entity
 
 server.port=7190
 
