--- a/review-server-dvl-phase1.properties
+++ b/review-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.review.reviewserver.entity
+entitymanager.packagesToScan:com.orastays.reviewserver.entity
 
 server.port=7192
 project.name=review-server
