--- a/testimonial-server-local.properties
+++ b/testimonial-server-local.properties
@@ -9,7 +9,7 @@ db.password:
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.testimonial.testimonialserver.entity
+entitymanager.packagesToScan:com.orastays.testimonialserver.entity
 
 server.port=7188
 project.name=testimonial-server
