--- a/review-server-local.properties
+++ b/review-server-local.properties
@@ -12,4 +12,7 @@ hibernate.hbm2ddl.auto:create/update
 entitymanager.packagesToScan:com.orastays.reviewserver.entity
 
 server.port=7192
+spring.mvc.view.prefix:/WEB-INF/jsp/
+spring.mvc.view.suffix:.jsp
+security.basic.enabled=false
 project.name=review-server
