--- a/review-server-dvl-phase1.properties
+++ b/review-server-dvl-phase1.properties
@@ -7,11 +7,14 @@ db.password:
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.show_sql:true
+hibernate.show_sql:false
 hibernate.hbm2ddl.auto:create/update
 entitymanager.packagesToScan:com.orastays.reviewserver.entity
 
 server.port=7192
+spring.mvc.view.prefix:/WEB-INF/jsp/
+spring.mvc.view.suffix:.jsp
+security.basic.enabled=false
 project.name=review-server
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 15  
