--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -18,3 +18,9 @@ eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.zipkin.base-url=http://ZIPKINSERVER
+
+yatra.url=http://stage-external.travelguru.com/services-2.0/tg-services/TGServiceEndPoint
+yatra.soap.action=http://stage-external.travelguru.com/TGServiceEndPoint
+yatra.password=test@123
+yatra.propertyId=1000000002
+yatra.username=testsell
