--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -12,3 +12,9 @@ entitymanager.packagesToScan:com.orastays.hotelserver.entity
 
 server.port=7094
 project.name=hotel-server
+
+yatra.url=http://stage-external.travelguru.com/services-2.0/tg-services/TGServiceEndPoint
+yatra.soap.action=http://stage-external.travelguru.com/TGServiceEndPoint
+yatra.password=test@123
+yatra.propertyId=1000000002
+yatra.username=testsell
