fixing error in project due to config

--- a/flight-server-dvl-phase1.properties
+++ b/flight-server-dvl-phase1.properties
@@ -26,3 +26,18 @@ createOrderUrl=https://test.gocashfree.com/api/v1/order/create
 initiateRefundUrl=https://test.gocashfree.com/api/v1/order/refund
 returnUrl=http://localhost:7193/api/notify-booking
 notifyUrl=http://localhost:7193/api/notify-booking
+
+###################################### booking server properties start ##########################################
+
+common.success.code=200
+common.success.message=OK
+common.error.code=201
+common.error.message=Please Try after Sometime
+generic.error.code=1800
+generic.error.message=Please Try after Sometime
+cashfreecreateorder.error.code=1801
+cashfreecreateorder.error.message=Error Occured During Order Generation. Please try after sometime
+cashfreerefundorder.error.code=1802
+cashfreerefundorder.error.message=Error Occured During Refund Creation. Please try after sometime
+
+###################################### booking server properties end ##########################################
