--- a/auth-server-local.properties
+++ b/auth-server-local.properties
@@ -2,8 +2,10 @@
 db.name=ora_auth
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_auth
+#db.username:root
+#db.password:
 db.username:root
-db.password:
+db.password:4bVygpf,RehT!8u
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
