--- a/booking-server-local.properties
+++ b/booking-server-local.properties
@@ -2,8 +2,10 @@
 db.name=ora_booking
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_booking
+#db.username:root
+#db.password:
 db.username:root
-db.password:
+db.password:+[MgZS3FyH5C>Z6F
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
