--- a/flight-server-local.properties
+++ b/flight-server-local.properties
@@ -2,8 +2,10 @@
 db.name=ora_flight
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_flight
+#db.username:root
+#db.password:
 db.username:root
-db.password:
+db.password:R4HzJpB_<a?QK\&)
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
