--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -1,9 +1,10 @@
 # Database
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_hotel
+#db.username:root
+#db.password:
 db.username:root
-db.password:
-
+db.password:nyRby:8!A-%mj(Uy
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
