--- a/newsletter-server-local.properties
+++ b/newsletter-server-local.properties
@@ -2,8 +2,10 @@
 db.name=ora_newsletter
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_newsletter
+#db.username:root
+#db.password:
 db.username:root
-db.password:
+db.password:n;f)<\@SdV)R2$(
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
