--- a/property-list-server-dvl-phase1.properties
+++ b/property-list-server-dvl-phase1.properties
@@ -2,9 +2,10 @@
 db.name=ora_property
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_property
+#db.username:root
+#db.password:
 db.username:root
-db.password:
-
+db.password:!_(L*t2Eb,MTu"G4
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:false
