--- a/review-server-dvl-phase1.properties
+++ b/review-server-dvl-phase1.properties
@@ -2,9 +2,10 @@
 db.name=ora_review
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_review
+#db.username:root
+#db.password:
 db.username:root
-db.password:
-
+db.password:uu36{BHH7N,uCZ_;
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:false
