--- a/testimonial-server-dvl-phase1.properties
+++ b/testimonial-server-dvl-phase1.properties
@@ -2,9 +2,10 @@
 db.name=ora_testimonial
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_testimonial
+#db.username:root
+#db.password:
 db.username:root
-db.password:
-
+db.password:kyR}2W8x4c:BJ}Xw
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
