--- a/banner-server-dvl-phase1.properties
+++ b/banner-server-dvl-phase1.properties
@@ -4,8 +4,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_banner
 db.username:Sudeep.Chhetri
 db.password:Ora@2019
-#db.username:root
-#db.password:-49kQNqz,)7$N[>F
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
