--- a/booking-server-local.properties
+++ b/booking-server-local.properties
@@ -4,8 +4,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_booking
 #db.username:root
 #db.password:
-db.username:root
-db.password:+[MgZS3FyH5C>Z6F
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
