--- a/flight-server-dvl-phase1.properties
+++ b/flight-server-dvl-phase1.properties
@@ -4,8 +4,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_flight
 #db.username:root
 #db.password:
-db.username:root
-db.password:R4HzJpB_<a?QK\&)
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
