--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -3,8 +3,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_hotel
 #db.username:root
 #db.password:
-db.username:root
-db.password:nyRby:8!A-%mj(Uy
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
