--- a/newsletter-server-dvl-phase1.properties
+++ b/newsletter-server-dvl-phase1.properties
@@ -4,8 +4,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_newsletter
 #db.username:root
 #db.password:
-db.username:root
-db.password:n;f)<\@SdV)R2$(
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
