--- a/property-add-server-local.properties
+++ b/property-add-server-local.properties
@@ -4,8 +4,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_property
 #db.username:root
 #db.password:
-db.username:root
-db.password:!_(L*t2Eb,MTu"G4 
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
