--- a/review-server-local.properties
+++ b/review-server-local.properties
@@ -4,8 +4,8 @@ db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_review
 #db.username:root
 #db.password:
-db.username:root
-db.password:uu36{BHH7N,uCZ_;
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
