--- a/auth-server-local.properties
+++ b/auth-server-local.properties
@@ -2,10 +2,10 @@
 db.name=ora_auth
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_auth
-db.username:root
-db.password:
-#db.username:Sudeep.Chhetri
-#db.password:Ora@2019
+#db.username:root
+#db.password:
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
