--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -1,8 +1,10 @@
 # Database
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_hotel
-db.username:root
-db.password:
+#db.username:root
+#db.password:
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
 #db.username:Sudeep.Chhetri
 #db.password:Ora@2019
 # Hibernate
