--- a/review-server-dvl-phase1.properties
+++ b/review-server-dvl-phase1.properties
@@ -2,10 +2,10 @@
 db.name=ora_review
 db.driver:com.mysql.jdbc.Driver
 db.url:jdbc:mysql://localhost:3306/ora_review
-db.username:root
-db.password:
-#db.username:Sudeep.Chhetri
-#db.password:Ora@2019
+db.username:Sudeep.Chhetri
+db.password:Ora@2019
+#db.username:root
+#db.password:
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:false
