--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -25,4 +25,4 @@ yatra.soap.action=http://stage-external.travelguru.com/TGServiceEndPoint
 yatra.password=test@123
 yatra.propertyId=1000000002
 yatra.username=testsell
-package.path=com.hotelserver.models
+package.path=com.hotelserver.model
