--- a/property-list-server-dvl-phase1.properties
+++ b/property-list-server-dvl-phase1.properties
@@ -11,6 +11,7 @@ hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:false
 hibernate.hbm2ddl.auto:create/update
 entitymanager.packagesToScan:com.orastays.propertylist.entity
+enable_lazy_load_no_trans:true
 
 server.port=7190
 
