--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -20,3 +20,4 @@ yatra.password=test@123
 yatra.propertyId=1000000002
 yatra.username=testsell
 package.path=com.hotelserver.model
+file.directory=file:D:\\hotel_dump\\
