--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -19,5 +19,5 @@ yatra.soap.action=http://stage-external.travelguru.com/TGServiceEndPoint
 yatra.password=test@123
 yatra.propertyId=1000000002
 yatra.username=testsell
-package.path=com.hotelserver.model
+package.path=com.hotelserver.model.search
 file.directory=file:D:\\hotel_dump\\
