--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -9,7 +9,7 @@ db.password:Ora@2019
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
 hibernate.hbm2ddl.auto:create/update
-entitymanager.packagesToScan:com.orastays.hotelserver.entity
+entitymanager.packagesToScan:com.hotelserver.entity
 
 server.port=7194
 project.name=hotel-server
