--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver:com.mysql.jdbc.Driver
-db.url:jdbc:mysql://localhost:3306/ora_hotel
+db.url:jdbc:mysql://localhost:3306/ora_hotel?characterEncoding=utf8mb4
 db.username:root
 db.password:
 #db.username:Sudeep.Chhetri
