--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver:com.mysql.jdbc.Driver
-db.url:jdbc:mysql://localhost:3306/ora_hotel?characterEncoding=utf8mb4
+db.url:jdbc:mysql://localhost:3306/ora_hotel
 db.username:Sudeep.Chhetri
 db.password:Ora@2019
 #db.username:root
