--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -8,7 +8,7 @@ db.password:Ora@2019
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql:true
-hibernate.hbm2ddl.auto:create
+hibernate.hbm2ddl.auto:create/update
 entitymanager.packagesToScan:com.hotelserver.entity
 
 server.port=7194
