--- a/hotel-server-dvl-phase1.properties
+++ b/hotel-server-dvl-phase1.properties
@@ -21,6 +21,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 spring.zipkin.base-url=http://ZIPKINSERVER
 
 yatra.url=http://stage-external.travelguru.com/services-2.0/tg-services/TGServiceEndPoint
+yatra.booking.url=http://stage-external.travelguru.com/services-2.0/tg-services/TGBookingServiceEndPoint
 yatra.soap.action=http://stage-external.travelguru.com/TGServiceEndPoint
 yatra.password=test@123
 yatra.propertyId=1000000002
