--- a/hotel-server-local.properties
+++ b/hotel-server-local.properties
@@ -15,6 +15,7 @@ server.port=7194
 project.name=hotel-server
 
 yatra.url=http://stage-external.travelguru.com/services-2.0/tg-services/TGServiceEndPoint
+yatra.booking.url=http://stage-external.travelguru.com/services-2.0/tg-services/TGBookingServiceEndPoint
 yatra.soap.action=http://stage-external.travelguru.com/TGServiceEndPoint
 yatra.password=test@123
 yatra.propertyId=1000000002
